# cards

./: README.md  pyproject.toml
.github/workflows/: python-app-mac.yml  python-app-ubuntu.yml  python-app-windows.yml  python-app.yml  python-app311.yml
cards/: cardExceptions.py  deck.py  game_stats.py  game_war.py  playing_card.py  practice.py  tables.py
cards/tests/: test_game.py
tests/: test_game.py
