[project]
name = "cards"
version = "0.1.0"
description = "Models a deck of cards"
authors = [
    {name = "hurley08", email = "intriqet@gmail.com"},
]
dependencies = [
    "pytest>=8.2.2",
    "ruff>=0.4.9",
    "loguru>=0.7.2",
    "pandas>=2.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
